# RRS

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_jax.py
algorithm/IPPO/: ippo_ff_mabrax.py
algorithm/IPPO/config/: ippo_ant_ball.yaml  ippo_ff_mabrax.yaml
algorithm/MAPPO/: coin_brax.py  mappo_lagrangian.py  mappo_linear.py  mappo_maven.py  mappo_rcb_rsq.py  mappo_rcb_rsq_brax.py  mappo_rnn_mpe.py  mappo_rnn_mpe_coin.py  maven_brax.py
algorithm/MAPPO/config/: coin_brax_ant.yaml  coin_brax_ant_ball.yaml  coin_brax_halfcheetah.yaml  coin_smax_27m.yaml  coin_smax_3s5z.yaml  lagrangian_smax_27m.yaml  mappo_coin_corridor.yaml  mappo_coin_tag.yaml  mappo_corridor.yaml  mappo_lagrangian_corridor.yaml  mappo_lagrangian_tag.yaml  mappo_linear_corridor.yaml  mappo_linear_tag.yaml  mappo_maven_corridor.yaml  mappo_maven_tag.yaml  mappo_tag.yaml  maven_brax_ant.yaml  maven_brax_ant_ball.yaml  maven_brax_halfcheetah.yaml  maven_smax_27m.yaml  maven_smax_3s5z.yaml  rcb_rsq_ant.yaml  rcb_rsq_ant_ball.yaml  rcb_rsq_corridor.yaml  rcb_rsq_halfcheetah.yaml  (+3 more)
coin_modules/: __init__.py  curiosity.py  influence.py
core/: __init__.py  callbacks.py  data_utils.py  intrinsic_sd.py  metrics.py  networks.py  networks_z.py  tdd_networks.py  utils.py  wrappers.py
jaxmarl/: registration.py
jaxmarl/environments/: __init__.py
jaxmarl/wrappers/: __init__.py  baselines.py
scripts/: plot_rsq_dynamics_combined.py  plot_smax_27m_learning_curve.py  plot_smax_3s5z_learning_curves.py  plot_smax_beta_sensitivity.py  plot_tag_learning_curves.py  regenerate_learning_curves.py
(+16 files in other folders)
