[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RRS"
version = "0.1.0"
description = "RRS - Reinforcement Learning Research Project"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "algorithm*", "coin_modules*"]