[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rrs"
version = "0.1.0"
description = "RCB+RSQ: Quality-Aware Exploration Budget Allocation for Cooperative Multi-Agent Reinforcement Learning"
requires-python = ">=3.9"
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "flax>=0.7.0",
    "optax>=0.1.7",
    "distrax>=0.1.5",
    "chex>=0.1.7",
    "gymnax>=0.0.6",
    "pettingzoo>=1.24.0",
    "brax>=0.10.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "wandb>=0.15.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "safetensors>=0.4.0",
]

[tool.setuptools]
py-modules = ["setup_jax"]

[tool.setuptools.packages.find]
where = ["."]
include = ["jaxmarl*", "core*", "coin_modules*"]
